@@ -9,7 +9,6 @@ use Cairo;
 
 my CSS::Font::Descriptor $arial .= new: :font-family<arial>, :src<url(resources/font/FreeMono.ttf)>;
 my HTML::Canvas $canvas .= new: :font-face[$arial];
-my HTML::Canvas::To::Cairo $feed .= new: :width(650), :height(400), :$canvas;
 lives-ok { $canvas.rect(100,100, 50,20); }, "basic API call - lives";
 dies-ok { $canvas.rect(100,100, 50, "blah"); }, "incorrect API call - dies";
 dies-ok { $canvas.rect(100,100, 50); }, "incorrect API call - dies";
@@ -25,7 +24,7 @@ is-deeply [$canvas.calls], [ :rect[100,100,50,20], :fill[], :scale[2.0, 3.0], :f
 is-deeply $canvas.js.lines, ('ctx.rect(100, 100, 50, 20);', 'ctx.fill();', 'ctx.scale(2.0, 3.0);', 'ctx.font = "30px Arial";', 'ctx.fillText("Hello World", 10, 50);'), '.js';
 
 # save canvas as PNG
-my Cairo::Surface $surface = $feed.surface;
+my Cairo::Surface $surface = $canvas.image;
 $surface.write_png: "tmp/01-basic.png";
 
 done-testing;
